slight update to memory handling update cmake file to debug amount set code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hw1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(hw1 main.c amount_set.c)
+add_executable(amount_set amount_set.c amount_set.h fromCourse/tests/amount_set_main.c fromCourse/tests/amount_set_tests.c fromCourse/tests/amount_set_tests.h)
