add target for exe with Safi's tests add Safi's test file fix illegal memory access error in amount_set fix memory leak issues in amount_set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_C_STANDARD 99)
 add_executable(amount_set amount_set.c amount_set.h tests/amount_set_main.c tests/amount_set_tests.c tests/amount_set_tests.h)
 add_executable(amount_set_local main.c amount_set.c amount_set.h)
 add_executable(amount_set_noa noa_amount_set_tests.c amount_set.c amount_set.h)
+add_executable(amount_set_safi safi_tests_amount_set.c amount_set.c amount_set.h)
 
 add_executable(matamazom_local main2.c matamazom.c matamazom.h amount_set.c amount_set.h matamazom_print.c matamazom_print.h)
 target_link_libraries(matamazom_local m)
