Fix memory leak in mtmClearProduct Add Noa's tests for Matamazom Add target for Noa's tests for Matamazom

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,7 @@ add_executable(amount_set_safi safi_tests_amount_set.c amount_set.c amount_set.h
 
 add_executable(matamazom_local main2.c matamazom.c matamazom.h amount_set.c amount_set.h matamazom_print.c matamazom_print.h)
 target_link_libraries(matamazom_local m)
+add_executable(matamazom_noa noa_matamazom_tests.c matamazom.c matamazom.h amount_set.c amount_set.h matamazom_print.c matamazom_print.h)
+target_link_libraries(matamazom_noa m)
 add_executable(matamazom_real matamazom.c matamazom.h tests/matamazom_main.c tests/matamazom_tests.c tests/matamazom_tests.h amount_set.c amount_set.h matamazom_print.c matamazom_print.h)
 target_link_libraries(matamazom_real m)
