refactor code to make line limit demand shorten long lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(amount_set amount_set.c amount_set.h tests/amount_set_main.c test
 add_executable(amount_set_local main.c amount_set.c amount_set.h)
 add_executable(amount_set_noa noa_amount_set_tests.c amount_set.c amount_set.h)
 add_executable(amount_set_safi safi_tests_amount_set.c amount_set.c amount_set.h)
-add_executable(amount_set_tests amount_set_tests_sivan.c amount_set amount_set.c amount_set.h)
+add_executable(amount_set_tests amount_set_tests_custom.c amount_set amount_set.c amount_set.h)
 
 
 
